--- a/config.env
+++ b/config.env
@@ -1,51 +1,48 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
-
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-OWNER_ID = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
+BOT_TOKEN = "5672755402:AAE_YlA_J2klR0XPhJVRcaz4k_OGjS_ftlY"
+OWNER_ID = "1458192575"
+TELEGRAM_API = "18349663"
+TELEGRAM_HASH = "1227a714a157e2056cc81fa81a7859c3"
 
 # OPTIONAL CONFIG
-GDRIVE_ID = ""
+GDRIVE_ID = "0ADdR_GSMbcu8Uk9PVA"
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 STATUS_UPDATE_INTERVAL = "20"
 AUTO_DELETE_MESSAGE_DURATION = "60"       
 AUTO_DELETE_UPLOAD_MESSAGE_DURATION = "-1" 
-DATABASE_URL = ""
-AUTHORIZED_CHATS = ""
-SUDO_USERS = ""
-IGNORE_PENDING_REQUESTS = ""
-IS_TEAM_DRIVE = ""
-USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = ""
-STATUS_LIMIT = "2"              #Recommended Value : 2 (If Using PICS)
-STOP_DUPLICATE = ""
+DATABASE_URL = "mongodb+srv://anshuman:anshuman@cluster0.nq4qlxg.mongodb.net/?retryWrites=true&w=majority"
+AUTHORIZED_CHATS = "-1001547427650"
+SUDO_USERS = "1458192575"
+IGNORE_PENDING_REQUESTS = "True"
+IS_TEAM_DRIVE = "True"
+USE_SERVICE_ACCOUNTS = "True"
+INDEX_URL = "https://drive.anshuman-mirror.workers.dev/0:"
+STATUS_LIMIT = "6"              #Recommended Value : 2 (If Using PICS)
+STOP_DUPLICATE = "True"
 CMD_PREFIX = ""
 UPTOBOX_TOKEN = ""
-TORRENT_TIMEOUT = ""
+TORRENT_TIMEOUT = "300"
 EXTENSION_FILTER = ""
 INCOMPLETE_TASK_NOTIFIER = ""
 TGH_THUMB = ""                  #Give Telegraph URL for Logs/File Thumbnail
 
 #TURN ON/OFF FUCTIONS
-LEECH_ENABLED = ""              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-MIRROR_ENABLED = ""             #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-WATCH_ENABLED = ""              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-CLONE_ENABLED = ""              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+LEECH_ENABLED = "True"              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+MIRROR_ENABLED = "True"             #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+WATCH_ENABLED = "True"              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+CLONE_ENABLED = "True"              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
 ANILIST_ENABLED = ""            #Default is False (only use by owner/sudo) Make it True (for authorized chats)
 WAYBACK_ENABLED = ""            #Default is False (only use by owner/sudo) Make it True (for authorized chats)
 MEDIAINFO_ENABLED = ""          #Default is False (only use by owner/sudo) Make it True (for authorized chats)
 SET_BOT_COMMANDS = "" 
 
 #UPDATE
-UPSTREAM_REPO = ""
+UPSTREAM_REPO = "https://github.com/AnshumanPM/WZML"
 UPSTREAM_BRANCH = ""
 UPDATE_PACKAGES = "False"
 
 #PM SUPPORT
-BOT_PM = ""
+BOT_PM = "True"
 FORCE_BOT_PM = ""               #For this the BOT_PM must be True 
 
 #LEECH LOGS
@@ -62,13 +59,13 @@ LINK_LOGS = ""
 TG_SPLIT_SIZE = ""
 AS_DOCUMENT = ""
 EQUAL_SPLITS = ""
-PAID_SERVICE = ""               #Default is False
+PAID_SERVICE = "True"               #Default is False
 TIMEZONE = "Asia/Kolkata"
 
 #TELEGRAPH UI (graph.org)
-TITLE_NAME = ""
-AUTHOR_NAME = ""
-AUTHOR_URL = ""
+TITLE_NAME = "Anshuman Bot"
+AUTHOR_NAME = "Anshuman Prasad Mahanta"
+AUTHOR_URL = "https://telegram.me/AnshumanPM_2006"
 GD_INFO = ""
 
 #FORCE SUBSCRIBE
@@ -89,19 +86,19 @@ RSS_CHAT_ID = ""
 USER_SESSION_STRING = ""     #Use it for 4GB leeching
 
 #MEGA
-MEGA_API_KEY = ""
-MEGA_EMAIL_ID = ""
-MEGA_PASSWORD = ""
+MEGA_API_KEY = "mYo2wD5a"
+MEGA_EMAIL_ID = "anshuman.p.m.1569@gmail.com"
+MEGA_PASSWORD = "@Anshuman758028"
 
 #SHORTENER 
 SHORTENER = ""
 SHORTENER_API = ""
 
 #APPDRIVE, GDFLIX, DRIVEAPP, DRIVEBIT, DRIVELINKS, DRIVESHARER, DRIVEACE ETC (COMMON LOGIN CREDENTIALS)
-UNIFIED_EMAIL = ""
-UNIFIED_PASS = ""
+UNIFIED_EMAIL = "anshuman.p.m.1569@gmail.com"
+UNIFIED_PASS = "@Anshuman1569"
 # GDTOT
-GDTOT_CRYPT = ""
+GDTOT_CRYPT = "VWRUUEI0a0JwYm85YlAwNnA4V2RyR3hSbGhvYm01MGZPZFJyY2RIdS80ND0%3D"
 # HUBDRIVE
 HUBDRIVE_CRYPT = ""
 # (KATDRIVE + KOLOP + DRIVEHUB)
@@ -126,9 +123,9 @@ MEGA_LIMIT = ""
 TIME_GAP = "-1"       
 
 #PROGRESS SYMBOLS
-FINISHED_PROGRESS_STR = '█'    # '■', Get Any from https://coolsymbol.com
-UN_FINISHED_PROGRESS_STR = '▒' # '□', Get Any from https://coolsymbol.com
-MULTI_WORKING_PROGRESS_STR = '▁ ▂ ▃ ▄ ▅ ▆ ▇' # Must have 7 Different Symbols for Dynamic Progress Bar
+FINISHED_PROGRESS_STR = '●'    # '■', Get Any from https://coolsymbol.com
+UN_FINISHED_PROGRESS_STR = '○' # '□', Get Any from https://coolsymbol.com
+MULTI_WORKING_PROGRESS_STR = '◔ ◔ ◑ ◑ ◑ ◕ ◕' # Must have 7 Different Symbols for Dynamic Progress Bar
 
 # THEME
 EMOJI_THEME = ""               #Default is False
@@ -138,7 +135,7 @@ SHOW_LIMITS_IN_STATS = ""      #Default is false
 TELEGRAPH_STYLE = ""           #Default is False
 
 #BRANDING
-CREDIT_NAME = "" 
+CREDIT_NAME = "𝑨𝒏𝒔𝒉𝒖𝒎𝒂𝒏𝑷𝑴 〄" 
 
 #DYNAMIC IMAGES
 PICS = ""                  # Add multiple telgraph image links that are seperated by spaces
@@ -159,12 +156,12 @@ IMDB_TEMPLATE = "<b>Title: </b> {title} [{year}]\n<b>Also Known As:</b> {aka}\n<
 
 #DIFFERENT BOT BUTTONS 
 DISABLE_DRIVE_LINK = "" 
-VIEW_LINK = ""
-SOURCE_LINK = ""
-START_BTN1_NAME = ""
-START_BTN1_URL = ""
-START_BTN2_NAME = ""
-START_BTN2_URL = ""
+VIEW_LINK = "True"
+SOURCE_LINK = "True"
+START_BTN1_NAME = "Owner"
+START_BTN1_URL = "https://t.me/AnshumanPM_2006"
+START_BTN2_NAME = "Authorised Group"
+START_BTN2_URL = "https://t.me/+mRNtIt7g9jJhYmNl"
 BUTTON_FOUR_NAME = ""
 BUTTON_FOUR_URL = ""
 BUTTON_FIVE_NAME = ""
