--- a/config.env
+++ b/config.env
@@ -12,7 +12,7 @@ AUTO_DELETE_MESSAGE_DURATION = "60"
 AUTO_DELETE_UPLOAD_MESSAGE_DURATION = "-1" 
 DATABASE_URL = "mongodb+srv://anshuman:anshuman@cluster0.nq4qlxg.mongodb.net/?retryWrites=true&w=majority"
 AUTHORIZED_CHATS = "-1001547427650"
-SUDO_USERS = "1458192575"
+SUDO_USERS = "1458192575 5293418498"
 IGNORE_PENDING_REQUESTS = "True"
 IS_TEAM_DRIVE = "True"
 USE_SERVICE_ACCOUNTS = "True"
@@ -37,7 +37,7 @@ MEDIAINFO_ENABLED = ""          #Default is False (only use by owner/sudo) Make 
 SET_BOT_COMMANDS = "" 
 
 #UPDATE
-UPSTREAM_REPO = "https://github.com/AnshumanPM/WZML"
+UPSTREAM_REPO = "https://AnshumanPM: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@github.com/AnshumanPM/WZML"
 UPSTREAM_BRANCH = ""
 UPDATE_PACKAGES = "False"
 
