--- a/config.env
+++ b/config.env
@@ -34,7 +34,7 @@ CLONE_ENABLED = "True"              #Default is False (only use by owner/sudo) M
 ANILIST_ENABLED = ""            #Default is False (only use by owner/sudo) Make it True (for authorized chats)
 WAYBACK_ENABLED = ""            #Default is False (only use by owner/sudo) Make it True (for authorized chats)
 MEDIAINFO_ENABLED = ""          #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-SET_BOT_COMMANDS = "" 
+SET_BOT_COMMANDS = "True" 
 
 #UPDATE
 UPSTREAM_REPO = "https://AnshumanPM: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@github.com/AnshumanPM/WZML"
